        can be configured through ZCML (see
        Products/PageTemplates/(configure.zcml, unicodeconflictresolver.py,
        interfaces.py)

      - AccessControl.Role: added new method
        manage_getUserRolesAndPermissions().

      - AccessControl: the form behind the "Security" tab has a new form
        for user-related reporting of permissions and roles

    Bugs Fixed

      - DAV: litmus' cond_put_corrupt_token test (#18) exposed a bug
        in webdav.Resource.dav__simpleifhandler.  If the resource is
        locked at all, and a DAV request contains an If header, and
        none of the lock tokens present in the header match a lock on
        the resource, we need to return a 423 Locked instead of 204 No
        Content.

      - DAV: litmus "notowner_modify" tests warn during a MOVE request
        because we returned "412 Precondition Failed" instead of "423
        Locked" when the resource attempting to be moved was itself
        locked.  Fixed by changing Resource.Resource.MOVE to raise the
        correct error.

      - DAV: litmus props tests 19: propvalnspace and 20:
        propwformed were failing because Zope did not strip off the
        xmlns: attribute attached to XML property values.  We now strip
        off all attributes that look like xmlns declarations.

      - DAV: When a client attempted to unlock a resource with a token
        that the resource hadn't been locked with, in the past we
        returned a 204 response.  This was incorrect.  The "correct"
        behavior is to do what mod_dav does, which is return a '400
        Bad Request' error.  This was caught by litmus
        locks.notowner_lock test #10.  See
        http://lists.w3.org/Archives/Public/w3c-dist-auth/2001JanMar/0099.html
        for further rationale.

      - When Zope properties were set via DAV in the "null" namespace
        (xmlns="") a subsequent PROPFIND for the property would cause the 